--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.5.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "8.x",
+    "npm": "*"
+  },
   "scripts": {
-    "start": "node index",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "Blockman_#0431",
